# MCAT-Prep-App

./: MERGE_TO_MAIN.sh  README.md
mcat-prep-app/: .env.example  .gitignore  FIX_DOCKER_BUILD.md  LAUNCH_GUIDE.md  QUICKSTART.md  README.md  REBUILD.sh  START_HERE.sh  docker-compose.yml
mcat-prep-app/backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
mcat-prep-app/backend/alembic/: env.py
mcat-prep-app/backend/app/: __init__.py  main.py
mcat-prep-app/backend/app/api/endpoints/: analytics.py  auth.py  questions.py  study.py  tests.py  users.py
mcat-prep-app/backend/app/core/: config.py  database.py  security.py
mcat-prep-app/backend/app/models/: __init__.py  content.py  progress.py  test.py  user.py
mcat-prep-app/backend/app/schemas/: __init__.py  question.py  study.py  test.py  user.py
mcat-prep-app/backend/scripts/: seed_comprehensive.py  seed_database.py
mcat-prep-app/frontend/: Dockerfile  index.html  package.json
mcat-prep-app/frontend/src/: App.tsx  index.css
mcat-prep-app/frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  QuizPage.tsx  QuizResultsPage.tsx  QuizTakingPage.tsx  RegisterPage.tsx  StudyPage.tsx
mcat-prep-app/frontend/src/services/: api.ts  auth.ts
mcat-prep-app/frontend/src/types/: index.ts
mcat-prep-app/scripts/: init_db.sh
